--- a/style.css
+++ b/style.css
@@ -10,6 +10,27 @@ body {
     background-color: var(--light);
 }
 
+h1 {
+    font-size: 2.25rem;
+}
+
+h2 {
+    font-size: 1.75rem;
+}
+
+h3 {
+    font-size: 1.25rem;
+}
+
+p {
+    font-size: 0.75rem;
+}
+
+.card-container {
+    display: flex;
+    flex-wrap: row wrap;
+}
+
 .card {
     padding: 10px;
     margin: 10px;
@@ -17,4 +38,61 @@ body {
 
 img {
     width: 250px;
+}
+
+@media only screen and (min-width: 1000px) {
+    body {
+        background-color: var(--camel);
+    }
+
+    h1 {
+        font-size: 2.75rem;
+    }
+    
+    h2 {
+        font-size: 2.25rem;
+    }
+    
+    h3 {
+        font-size: 1.75rem;
+    }
+    
+    p {
+        font-size: 1.25rem;
+    }
+}
+
+@media only screen and (min-width: 700px) and (max-width: 999px) {
+    body {
+        background-color: var(--teal);
+    }
+
+    h1 {
+        font-size: 2.50rem;
+    }
+    
+    h2 {
+        font-size: 2rem;
+    }
+    
+    h3 {
+        font-size: 1.50rem;
+    }
+    
+    p {
+        font-size: 1rem;
+    }   
+}
+
+@media only screen and (max-width: 699px) {
+    body > p {
+        display: none;
+    }
+}
+
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: var(--dark);
+        color: var(--light);
+    }    
 }
